# py-seed

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  cspell.json  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pypi_release.yml
pyseed/: .pylintrc  __init__.py  apibase.py  exceptions.py  seed_client.py  seed_client_base.py  seed_client_uploader.py  seedclient.py  utils.py
pyseed/tests/: test_seedclient.py
tests/: test_apibase.py  test_seed_base.py  test_seed_client.py  test_seed_client_base.py  test_seed_properties.py  test_seed_uploader.py  test_seedclient.py  test_utils.py
tests/data/: seed-config.json  test-seed-create-columns.csv  test-seed-data-mappings.csv  test-seed-data-with-meters.xlsx  test-seed-data-with-multiple-cycles.xlsx  test-seed-data.xlsx
tests/integration/: docker-compose.yml
