[metadata]
name=py-seed
version=0.3.0
description=A Python API client for the SEED Platform
author=Fable Turas, Paul Munday, Nicholas Long
author_email=fable@raintechpdx.com, paul@paulmunday.net, nicholas.long@nrel.gov
maintainer=GreenBuildingRegistry, NREL
maintainer_email=admin@greenbuildingregistry.com
keywords= seed, api
url=https://github.com/seed-platform/py-seed
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	requests>=2.28.0
	typing==3.6.1

[bdist_wheel]
universal = 1
