[metadata]
name=py-seed
version=0.4.1
description=A Python API client for the SEED Platform
author=Nicholas Long, Katherine Fleming, Fable Turas, Paul Munday
author_email=nicholas.long@nrel.gov, fable@raintechpdx.com, paul@paulmunday.net
maintainer=NREL
maintainer_email=nicholas.long@nrel.gov
keywords= seed, api
url=https://github.com/seed-platform/py-seed
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	requests>=2.28.0
	typing==3.6.1

[bdist_wheel]
universal = 1
