[metadata]
name = py-seed
version = 0.5.1
description = A Python API client for the SEED Platform
author = Nicholas Long, Katherine Fleming, Fable Turas, Paul Munday
author_email = nicholas.long@nrel.gov, katherine.fleming@nrel.gov, fable@raintechpdx.com, paul@paulmunday.net
maintainer = NREL
maintainer_email = nicholas.long@nrel.gov
keywords = seed, api
url = https://github.com/SEED-platform/py-seed
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[project_urls]
Source Code = https://github.com/SEED-platform/py-seed
Changelog = https://github.com/SEED-platform/py-seed/blob/develop/CHANGELOG.rst

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    requests>=2.28.0

[bdist_wheel]
universal = 1
